# mobile_robotics_basics

./: .gitignore  LICENSE  LICENSE.md  README.md  platformio.ini
Resources/: Wifi_drive_6_final.aia  Wifi_drive_7_integrate.aab  Wifi_drive_7_integrate.aia  XY_Coordinate_app.aia  XY_Coordinate_app.apk
include/: EncoderControl.h  MotorControl.h  dead_Reckoning.h  ir_sensor.h  motor_control.h  oled_display.h  pi_controller.h  wifi_communication.h
lib/: credentials.h  dead_Reckoning.cpp
lib/Credentials/: credentials.h
lib/Encoder Control/: EncoderControl.cpp  EncoderControl.h
lib/Motor Control/: MotorControl.cpp  MotorControl.h  motor_control.cpp  motor_control.h
lib/Motor Setup/: motor_control.cpp  motor_control.h
lib/Proprtional Integration/: pi_controller.cpp  pi_controller.h
lib/Wifi Communication/: wifi_udp.cpp  wifi_udp.h
lib/Wifi Configuration/: wifi_communication.cpp  wifi_communication.h
p1_Wifi_controlled_robot/: platformio.ini
p3_rpi_follow_object_bot/: CMakeLists.txt
p3_rpi_follow_object_bot/include/: camera_controller.hpp  crow_all.h  motor_control.hpp  robot_motion.hpp
p3_rpi_follow_object_bot/src/: camera_controller.cpp  main.cpp  motor_control.cpp  robot_motion.cpp  single_file_old_implemenation.cpp
src/: Camerawebservo.ino  EncoderControl.cpp  Message_sendinng.py  MotorControl.cpp  app_httpd.cpp  camera_http.cpp  camera_show_on_pc.py  dead_Reckoning.cpp  ir_sensor.cpp  main.cpp  message_send_on_sms.ino  motor_control.cpp  oled_display.cpp  pi_controller.cpp  udp_recieve.py  udp_send.py  wifi_communication.cpp  wifi_udp.cpp
(+17 files in other folders)
